More test updates